# owloop

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  README.md  ROADMAP.md  pyproject.toml
.claude/commands/: owloop.md
.github/: BRAND.md  discussions-faq-draft.md  social-preview.html
.github/workflows/: ci.yml  dispatch-release.yml  pages.yml  release.yml
.owloop/specs/: 007-feat-owloop-go-should-support-all-owloop-run-optio.md  008-feat-respect-spec-dependency-order-in-engine-sched.md  009-feat-add-sessionresume-semantics-for-interrupted-o.md  01-restore-banner-command-list.md  010-feat-inject-linter-rules-into-spec-generation-and-.md  011-feat-structured-event-logging-for-debugging-and-re.md  012-feat-add-dry-run-one-shot-mode-to-validate-specs-w.md  013-feat-make-tui-optional-with-no-tui-plain-flag.md  014-refactor-extract-common-streaming-adapter-base-cla.md  015-feat-per-session-worktree-branches-to-avoid-same-d.md  016-feat-real-time-token-tracking-with-per-iteration-b.md  02-agent-agnostic-skills-and-kimi-adapter.md  02-auto-discover-backpressure-commands.md  03-separate-verifier-agent.md  04-spec-quality-review-skill.md  05-subagent-orchestration.md  06-agents-md-self-learning.md  issue-1-feat-separate-verifier-agent-from-executor-agent.md  issue-2-feat-auto-discover-backpressure-commands-on-init.md  issue-3-feat-spec-quality-review-skill-code-review-integra.md  issue-4-feat-subagent-orchestration-in-build-iterations.md  issue-5-feat-agents-md-self-learning-and-recovery-strategi.md  issue-6-feat-owloop-go-should-support-all-owloop-run-optio.md
docs/: skills-sh-submission.md
prototypes/: tui_concept.py
scripts/: owloop.sh
site/: index.html  styles.css  terminal-demo.js
skills/owloop/: SKILL.md
skills/owloop-loop-control/: SKILL.md
skills/owloop-report/: SKILL.md
skills/owloop-report/references/: report-template.md
skills/owloop-runner/: SKILL.md
skills/owloop-spec/: SKILL.md
skills/owloop-spec/references/: spec-format.md
skills/owloop-verify/: SKILL.md
skills/owloop-verify/references/: architecture-checklist.md  baseline-calibration.md  change-trap-checklist.md  code-quality-checklist.md  (+6 more)
src/owloop/: __init__.py  _brand.py  acp.py  adapters.py  analyzer.py  backpressure.py  cli.py  cli_config.py  cli_display.py  cli_options.py  config.py  engine.py  git_stats.py  learnings.py  notifications.py  parallel.py  paths.py  presets.py  promise.py  report.py  report_ai.py  report_design_system.py  reporter.py  sessions.py  sleep_inhibitor.py  spec_from_issue.py  spec_generator.py  spec_linter.py  spec_queue.py  spec_review.py  subagents.py  tokens.py  tui.py  verification.py
templates/: AGENTS.md  PROMPT_build.md  PROMPT_plan.md  constitution-template.md  spec-legacy-refactor.md  spec-ml-hygiene.md  spec-template.md  spec-type-annotations.md
tests/: fake_acp_agent.py  test_acp.py  test_adapters.py  test_analyzer.py  test_backpressure.py  test_brand.py  test_cli.py  test_config.py  test_engine.py  test_engine_converge.py  test_engine_phase1.py  test_learnings.py  test_notifications.py  test_parallel.py  test_paths.py  test_presets.py  test_promise.py  test_report.py  test_report_ai.py  test_reporter.py  test_sleep_inhibitor.py  test_spec.py  test_spec_from_issue.py  test_spec_generator.py  test_spec_linter.py  test_spec_queue.py  test_spec_review.py  test_subagents.py  test_tokens.py  test_tui.py  test_verifier.py
(+20 files in other folders)
