[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "owloop"
version = "0.5.0"
description = "Your code evolves while you sleep. 🦉 Spec-driven autonomous coding loop."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Eric Cao", email = "itsericsmail@gmail.com" }]
keywords = ["claude-code", "autonomous", "coding", "loop", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
owloop = "owloop.cli:main"

[project.urls]
Homepage = "https://eric.run.place/owloop/"
Repository = "https://github.com/caoergou/owloop"
Documentation = "https://eric.run.place/owloop/"

[tool.hatch.build.targets.wheel]
packages = ["src/owloop"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long is handled by formatter

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/owloop --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/owloop"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
